# ChangeLog for dev-python/pkginfo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pkginfo/ChangeLog,v 1.4 2012/11/13 11:18:04 idella4 Exp $

  14 Nov 2012; Ian Delaney <idella4@gentoo.org> metadata.xml:
  Updating maintainer, metadata.xml

  02 Nov 2012; Ian Delaney <idella4@gentoo.org> pkginfo-0.9.ebuild:
  Fixed bug #438598, prevents double compression

*pkginfo-0.9 (08 May 2012)

  08 May 2012; Dirkjan Ochtman <djc@gentoo.org> +pkginfo-0.9.ebuild:
  Version bump to 0.9.

*pkginfo-0.8 (27 Apr 2012)

  27 Apr 2012; Theo Chatzimichos <tampakrap@gentoo.org> +metadata.xml,
  +pkginfo-0.8.ebuild:
  Initial commit, ebuild by idella4