@@ -1,6 +1,14 @@
-DIST pkginfo-0.8.tar.gz 22374 SHA256 5d37007c0ca72e41367bd2c1a9af6d5927996f516b6df7584110ef7cafd0efbb SHA512 d5a2478a1ca0cdb191944a3908f5297c3a7c2db53c58d23d3a85d2433527e611b33d4ac236c76fb96ef40892f0035bc6e7f6a52958cdf0ecae97bba0528b6f1b WHIRLPOOL f8cd9956a681a7d86344ce6e32bc0ea73fbe59ef4604f3b32feaa600f8a0fd2d31d1bef29ead1857fc9de241fe4e30afa7edf45a49c9bb46d3e7ebd8b36fd503
-DIST pkginfo-0.9.tar.gz 24094 SHA256 737d6572611da02470b4378599e64c4ddd1061456ca4c40e5d7adf2720906b75 SHA512 a8b8b32e6e07d7d25a6fa59530ddf7068effabe7493d57c4b82fa4b116d24560da03a41f7b9adbce3ae8b684c99cdf79e230a660033440c57349bf7cd8f05c2c WHIRLPOOL 0f5d365b7e28fd6bb81fe42f43181889b0cfb9cc15fe2aac67be65c67bc71ec767e0b7d0b8094e694242e2bf209a38d6e410aaa6f8f73a485afb55b8298ebafd
-EBUILD pkginfo-0.8.ebuild 1398 SHA256 1e203b14877487a1bdecd786dea092c460571bc102d59e0e0f1c832e8b61a962 SHA512 05a8b55654b28de1749c485629a34cea04c3b8f15fb6c5bd0d706cdb87dc0b0e1f71bf6359fe88a011b54d15e05cd8bf7a3f72edd09aa62ed3f2e626ac5e27f9 WHIRLPOOL a1c6a680154775f7e284fc2a054e1e4a37cc892ee8adfe1671d4d9ee5e5ff4c148160e435da0a79d8d2e741135c9291efaf90786bc836b189d4c5f1b61101847
-EBUILD pkginfo-0.9.ebuild 1449 SHA256 3429cbfa1ea16b489eb4790ed9429484a8ee73a9de65d03e26ec331f8c86bbf8 SHA512 f09fcbb57ddce68351538bc5a255c13b08d089acbf1e20dc72b310c027d33bce3cfeff84765935a4b92585cf29709d8e8d7d29b8dafa33eb7fb0e274b6e1ecd1 WHIRLPOOL 8359e9c788bf5ea2ba41fe50573855d8ad3b04d5a1da38447a063ab0da610c388dda43b2be598e8ef8aeb155c3826d114bb9b40842535ea749d492f8bae5198a
-MISC ChangeLog 706 SHA256 87f5fe57d3f6f49e82b3d70dba1b8c0c76766b95777feaa28ab59053a45d3187 SHA512 06b65d51a9e1d78e6fa1e39234c4754b7f4c52632413d619f0923fc87764ebc0ea480459706db463dd6d2440cb779eea398bb378ea88bd82cfbf8b11787385d5 WHIRLPOOL 372174b4556ef5a47f6c4097d92a9c827e51e1411839ec8352641f892f661f767eee629bcdfa96728df1f9fe82ce7c63f3697ea62259abf006ae6c28af76d08e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pkginfo-1.0.tar.gz 24802 SHA256 27b171632c6894ae5d0d5677678dfc4e9b86f3b422eb3db1cc62960b1c9886f0 SHA512 1b0f9ed60b53202deb729fa9261059b7fe1b3e4561f27ad51152e5077c45dd4f47fcb81da45cd2e509b046e9bb05652533ae90de31f93831743a9d35c938b14d WHIRLPOOL 312e3bac0a8e4740a40484f9e77a137479e339b6c472409e890d3ba13059a6637c8c2bb0d8bd4496364d98ff3ac1fe7272d4750560c4cdc1d9735187ede0cd5c
+EBUILD pkginfo-1.0.ebuild 1323 SHA256 0934b81f5c62e05b37bd4d886ad41108b2e0b8d167cb6ec0fb0db618c3fcee59 SHA512 4cf4ef384ec0f9ac58070624d501fc8a9c67b51cfe593a3e24e71602218cc6f252284e1c9cd9598e26343eb9015ba3c90494d549dbdd282847f6433a025362bf WHIRLPOOL 046af178664b94381c1f695d6f955552fb36511b035040809f8e823c1b70481e0c3606c0a8443043c67d957ee1c3438e7b5af3e69879d928a7d4ff8122781b05
+MISC ChangeLog 977 SHA256 674fb2e5d969205a4cfa0c1db32766b71aaff0879b18ce76c36262b547b20b2f SHA512 62f27b1fa9a652e24279a27f7ed1c8edaf82d816b516cdf80751fe93d3af788d7cdfe96dd15910c2f230718aa6d6f88dd572ed6b29f17f83ab5578b738998585 WHIRLPOOL 6fc90ab64d580dfa826fa089e0fb652734a1f957fd567aa29970f5dd0356fffc0e719a3820c9e73557467b76ef0d87fa45e2099d82369f05adee0fb0b29e1c7c
 MISC metadata.xml 253 SHA256 e46efd590a64061ef839b703b4ea6f25ec8aa4b2e4da401c7ae00c74828de0c2 SHA512 8b47855847429a6f134541fe072f4b650f58e8ef0eb534e61c88442681429185b6ae3217512c69a427cf1309bad72fa7ab0d17bc62db76e4653081639224eac4 WHIRLPOOL 28eed9c27b29956e68cc70e1f74106f7e1b30a744c0cf045957cf80b5da93c05174f9a426ea7efef83ed07b7b3bdeb1c7139199e211837c5d4ec64870e0e7c69
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlGxdfgACgkQso7CE7gHKw3qXQCguzuBo0hD8kEA/t4aQmRd6dfk
+o9wAmwbgVd6XWrrgCm+YN9Dygp9hlOK2
+=Sa5p
+-----END PGP SIGNATURE-----
