@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup test
-DEPEND=doc? ( dev-python/sphinx ) dev-python/setuptools =dev-lang/python-2*
-DESCRIPTION=Provides an API for querying the distutils metadata written in a PKG-INFO file
-EAPI=4
-HOMEPAGE=http://pypi.python.org/pypi/pkginfo
-IUSE=doc examples
-KEYWORDS=~amd64 ~x86
-LICENSE=MIT
-RDEPEND=doc? ( dev-python/sphinx ) dev-python/setuptools =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/p/pkginfo/pkginfo-0.8.tar.gz
-_eclasses_=distutils	77fc6005d2dfcc7bdb5ec363a49d9912	eutils	f31a0ec0d081047cbf9c0bbb4822d831	multilib	892e597faee02a5b94eb02ab512e7622	python	dd56675d8e9f7e85d815a28c87383141	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=7113e39e887a8c09a89ae9180d7e327b
