@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=doc? ( dev-python/sphinx[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] ) dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_pypy2_0? ( dev-python/pypy:2.0 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)]
+DESCRIPTION=Provides an API for querying the distutils metadata written in a PKG-INFO file
+EAPI=5
+HOMEPAGE=http://pypi.python.org/pypi/pkginfo
+IUSE=doc examples python_targets_python2_6 python_targets_python2_7 python_targets_pypy2_0
+KEYWORDS=~amd64 ~x86
+LICENSE=MIT
+RDEPEND=doc? ( dev-python/sphinx[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] ) dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)] python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_pypy2_0? ( dev-python/pypy:2.0 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_pypy2_0(-)]
+REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_pypy2_0 )
+SLOT=0
+SRC_URI=mirror://pypi/p/pkginfo/pkginfo-1.0.tar.gz
+_eclasses_=distutils-r1	6950481ecc2ad548f2d9d116a0936fb8	eutils	f31a0ec0d081047cbf9c0bbb4822d831	multibuild	4f797e941786b6313d84053ae3e0ec96	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	094dc7421f9aea7525b85b899f67e62a	python-utils-r1	9aa9cecaaf78644be7c0b8b8dc814dce	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=2f781aacd1c07bd9505d5dca23685de0
