@@ -10,4 +10,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/curlftpfs/curlftpfs-0.9.2.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	f31a0ec0d081047cbf9c0bbb4822d831	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=957e4296f5ec13f600cc23d9f9fabc3f
+_md5_=4f8bb7fee8792219e3478008921e0919
