@@ -7,13 +7,13 @@ AUX curlftpfs-0.9.2-memleak-nocache.patch 1810 SHA256 d51e86585061c4dc15145d50d1
 AUX curlftpfs-0.9.2-memleak.patch 834 SHA256 b81de7d8eac46a390f1baf4071efde62c77148908562ea9a255acc9fd8d35f97 SHA512 dee0eac27bd09208f44d20d3c0627499da0664601abfb0cb5a3a979c988c71713ef00850f2b72e71c38a9dac09698e55cfbc6249bb1e2196a07a783b0fcd49bc WHIRLPOOL 17e3d417734ca610753c2435e736d3d833183b3346873039bc352d9cb36748f792b34e3c46f1609c1d0d94e30db7d702d17a7544a3edef4766fbfdaf918e9130
 DIST curlftpfs-0.9.2.tar.gz 365503 SHA256 4eb44739c7078ba0edde177bdd266c4cfb7c621075f47f64c85a06b12b3c6958 SHA512 df07c418d175f766c89525017fc56e79726061eee0c3a6607ded0e1bf24f64f1475ba0e546157b65892194e3c4414c120822bf8fb175437e68366f82de216067 WHIRLPOOL c14686eeadafe2f26f9c79fd44ab0d66403e79ec724d5eae28a8b3838ac676755edc1d86583c4de73486fc0dc5d49eabb2b57f7cb477edaccfab33b2aa9f0931
 EBUILD curlftpfs-0.9.2-r1.ebuild 969 SHA256 b01610eda2e8bad3db25c38059e25d432cfc4a2a841a22aa676319f92187dce2 SHA512 383f4a0644a37365560091467d4b40edd8b16552be119329ad21ad3227abb9cf58984517b5be629733e36216f9d4c35217e1c6d2eff732f0a04c5f84aa02b0e7 WHIRLPOOL 2b72ff49a4392a766c37c5828cdd8ba33e2005232c53fc2ef95b5c9488b3bdb8239fd25e95f6a1fbad3acc6f04735da2424d0d175e8769d9aaa80692203846b0
-EBUILD curlftpfs-0.9.2-r2.ebuild 1075 SHA256 43b798929a263df7993e1b8eb2c9a134aa33eb68be06633452863d3d616c4bd0 SHA512 ba15b5472c1aa4be4f29e21b1bf140b065ab0f214d75f76618e90cffd5d3d879c4962134041beb714063e03621897f842bebb27ded9d053ddd2e2d3c499a030b WHIRLPOOL 4951ed8394c168db1f8ba84f210783e103e6e0dc2022535661ee80a554ef99cf7c9f3da92e79834266b466ec4ada7943f6921b95013ea92b2b23d4273d7f17bc
-MISC ChangeLog 3985 SHA256 9bea9c12e51d186da1eadab5bfa55ac397a79cdb25b29f2e0d4aab0d5eeced32 SHA512 ca746b4e2737a27ca084f3c945402fe943d39fb06299e1f8d272ee84c525a8b49eb6177c5b0cdf8893482f8f50de8be451828dc927156399bfda677ee76a9cca WHIRLPOOL 46992c36865622582ebea6e14ba09f7752e95214c9e04b5e2bb4bea6d816ee29432c8af32d1ed6bd3776df2d2185883c10216801469af77e07ab8df0cb5e2da0
+EBUILD curlftpfs-0.9.2-r2.ebuild 1090 SHA256 a2c8bea5deb3dbf44bfe003a97413a1d0f929b7045ead605d07d7ac8bf8786b7 SHA512 cf26015119d703035f41eff86c2de089bcbb946c4779170d0088730ec6c302efa25667030ead9fba0a7b5f49765d2ed420a3dd8c549c2f57b9cb7e6de14ed729 WHIRLPOOL 986143108b8a238f1230767a07a8e74b81b4fd698bf9d4acdc743da0e49a919193f3a7532a76b51b0220923cb9e1072e61cf3d7257db345f1607737d69eddefd
+MISC ChangeLog 4176 SHA256 9d117a8842b52e6bd7e8ffc38382a08c5056c0d1afe1aeb280349b4de854f3be SHA512 2067d7e2a005989e6aaf6e2616b0898627c62cbb5ee16e919b1a1c8f0e18fe41fa7f2bc96c3ae395157e383feb83315f13c5e4d6cb1f8c6bed963de23eec05c9 WHIRLPOOL ca22853aca57ee14fab3d9d21992ad2bdf1eb819de1f809971dcecc79be13feeafbad12695488af8eaad477d6d0e01be248b6405b9fbcbeb8d0666af05bd1a26
 MISC metadata.xml 265 SHA256 89560d1b083b008e6d38f31d7fa5a97da8890a72e93d0532ac0bbc8b15b2679e SHA512 0048ece4ab8d1dfdfb3be937d2c33d12428d69621bd0c02c21202ef414c4a7c73869c52e333d46b49466abe82af1ef50b0bedb79f648591d1aea82a429d10857 WHIRLPOOL 8ceef3afb2393cefdf25df36e2b42322dcf19181982c228942de02b586984949023c42e7559093211a63edad2491905f47fc47d19ddadba0a4ba669a597b714b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGw8qwACgkQcaHudmEf86oxGACdF2FlpbaWSxCz/Cn1vqTvK8zD
-N9QAniAn5ADJTHmGr42DxgZWi/MJlvZT
-=+1Oa
+iEYEAREIAAYFAlGxbbEACgkQcaHudmEf86olcgCffGX5ArXsPg5aqfzJ9rr5LEgY
+yV4AnR21NXUG/X50QmeIQHJqhPYWHANT
+=mv8D
 -----END PGP SIGNATURE-----
