@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/curlftpfs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/curlftpfs/ChangeLog,v 1.26 2013/06/06 20:37:14 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/curlftpfs/ChangeLog,v 1.27 2013/06/07 05:22:06 slyfox Exp $
+
+  07 Jun 2013; Sergei Trofimovich <slyfox@gentoo.org> curlftpfs-0.9.2-r2.ebuild:
+  Added 'epatch_user' to ease experiments with unofficial fixes (like in bug
+  #458110 by Jaakko Perttilä).
 
 *curlftpfs-0.9.2-r2 (06 Jun 2013)
 
