@@ -1,6 +1,15 @@
 # ChangeLog for dev-python/pkginfo
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pkginfo/ChangeLog,v 1.4 2012/11/13 11:18:04 idella4 Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pkginfo/ChangeLog,v 1.6 2013/06/07 05:55:56 idella4 Exp $
+
+  07 Jun 2013; Ian Delaney <idella4@gentoo.org> pkginfo-1.0.ebuild:
+  drop py2.5
+
+*pkginfo-1.0 (07 Jun 2013)
+
+  07 Jun 2013; Ian Delaney <idella4@gentoo.org> +pkginfo-1.0.ebuild,
+  -pkginfo-0.8.ebuild, -pkginfo-0.9.ebuild:
+  revbump, migrate -> distutils-r1, remove old
 
   14 Nov 2012; Ian Delaney <idella4@gentoo.org> metadata.xml:
   Updating maintainer, metadata.xml
